# winrt_toast_notification

./: .gitignore  Cargo.toml  README.md
OutlookInterop/: OutlookInterop.sln
OutlookInterop/OutlookInterop/: OutlookInterop.csproj  mapi.cs
src/: main.rs
