[package]
name = "winrt_toast_notification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "*" }
chrono = {version = "*"}
netcorehost = { version = "0.15.1", features = ["net6_0"] }

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "UI",
    "UI_Notifications",
    "Foundation_Collections",
    "Data_Xml_Dom",
]
